@@ -9,3 +9,4 @@
  2-Feb-2021 - V0.16 Adjust mismatch reporting during build workflow, update dependencies, add assemble check method
  2-Feb-2021 - V0.17 Add working path to OeAlignUtils(), adjust check method, keep heavy atom only structures
  3-Feb-2021 - V0.18 Simplify the build alignment criteria, add cli criteria option, and improve the handling of aromatic bond matching
+ 5-Feb-2021 - V0.19 Make assemble respect prior modelId assignments.
